--- a/webparsing/src/main/resources/config.properties
+++ b/webparsing/src/main/resources/config.properties
@@ -2,5 +2,5 @@
 ## Application configuration ##
 ###############################
 path.page.index=/index.jsp
-path.page.result=/result.jsp
-path.page.error=/error.jsp
+path.page.result=/jsp/result.jsp
+path.page.error=/jsp/error/error.jsp
