--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -2,5 +2,4 @@
 ## Application configuration ##
 ###############################
 path.page.index=/index.jsp
-path.page.result=/jsp/result.jsp
-path.page.error=/jsp/error/error.jsp
+path.page.error=/WEB-INF/jsp/error/error.jsp
