--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -10,7 +10,7 @@ navbar.remember.pass=Remember password
 navbar.link.logout=Logout
 navbar.form.username=Username
 navbar.form.password=Password
-navbar.form.password.confirm=Password
+navbar.form.password.confirm=Confirm Password
 navbar.form.email=Email
 footer.copyright=Copyright &copy; WhereUWannaGO 2019
 index.find.trip=Find a trip
