added serverTimezone option

--- a/hitcher/src/main/resources/database.properties
+++ b/hitcher/src/main/resources/database.properties
@@ -2,6 +2,7 @@ user=hitcher_user1
 password=password
 url=jdbc:mysql://localhost/hitcher_db
 characterEncoding=UTF-8
+serverTimezone=UTC
 useUnicode=true
 autoReconnect=true
 poolSize=5
