--- a/hitcher/web/WEB-INF/web.xml
+++ b/hitcher/web/WEB-INF/web.xml
@@ -3,14 +3,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>by.gartsmanovich.hitcher.controller.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>defaultEncoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>*.do</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>ActionFilter</filter-name>
+        <filter-class>by.gartsmanovich.hitcher.controller.filter.ActionFilter</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>ActionFilter</filter-name>
         <url-pattern>*.do</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>by.gartsmanovich.hitcher.controller.filter.SecurityFilter</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>SecurityFilter</filter-name>
         <url-pattern>*.do</url-pattern>
