--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -2,4 +2,5 @@
 ## Application configuration ##
 ###############################
 path.page.index=/index.jsp
+path.page.profile=/WEB-INF/jsp/profile.jsp
 path.page.error=/WEB-INF/jsp/error/error.jsp
