--- a/hitcher/web/WEB-INF/web.xml
+++ b/hitcher/web/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <filter>
+        <filter-name>CookieLocaleFilter</filter-name>
+        <filter-class>by.gartsmanovich.hitcher.controller.filter.CookieLocaleFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CookieLocaleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>by.gartsmanovich.hitcher.controller.filter.EncodingFilter</filter-class>
         <init-param>
