--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -5,7 +5,7 @@ navbar.link.login=Sign in
 navbar.link.register=Register
 navbar.link.services=Services
 navbar.login.welcome=Welcome back!
-navbar.link.profile=Profile
+navbar.greetings=Hello
 navbar.remember.pass=Remember password
 navbar.link.logout=Logout
 navbar.form.username=Username
@@ -14,3 +14,5 @@ navbar.form.password.confirm=Confirm Password
 navbar.form.email=Email
 footer.copyright=Copyright &copy; WhereUWannaGO 2019
 index.find.trip=Find a trip
+navbar.link.profile=Profile
+navbar.link.language=Language
