added new keys for profile page

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -16,3 +16,18 @@ footer.copyright=Copyright &copy; WhereUWannaGO 2019
 index.find.trip=Find a trip
 navbar.link.profile=Profile
 navbar.link.language=Language
+error.title=Error!
+navbar.link.user.list=User list
+profile.preferences=Preferences
+profile.personal.data=Personal data
+profile.driver.license=Driver license
+profile.email=Email
+profile.review=Reviews
+profile.pass=Password
+profile.personal.data.header=My personal data
+profile.preferences.header=My preferences
+profile.driver.license.header=My driver license
+profile.email.header=My email
+profile.review.header=My reviews
+profile.pass.header=My password
+
