added new keys for index page

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -28,6 +28,17 @@ profile.personal.data.header=My personal data
 profile.preferences.header=My preferences
 profile.driver.license.header=My driver license
 profile.email.header=My email
-profile.review.header=My reviews
+profile.review.header.received=My received reviews
 profile.pass.header=My password
+profile.info=Profile information
+profile.review.received=Received reviews
+profile.review.left=Reviews left
+profile.account=Account
+profile.review.header.left=My sent reviews
+index.about=About this page
+index.services=Services we offer
+index.contact=Contact us
+index.contact.info=If you have any troubles with WhereUWannaGO service, we're not ready to help.
+index.services.info=Search and trip planning, sharing the cost of trip between its participants.
+index.about.info=Are you planning a trip? Is there free space in your car? Find fellow travelers or become one. Together more fun and cheaper!
 
