--- a/hitcher/web/WEB-INF/web.xml
+++ b/hitcher/web/WEB-INF/web.xml
@@ -39,4 +39,8 @@
         <filter-name>SecurityFilter</filter-name>
         <url-pattern>*.do</url-pattern>
     </filter-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/error/error.jsp</location>
+    </error-page>
 </web-app>
