--- a/hitcher/web/WEB-INF/web.xml
+++ b/hitcher/web/WEB-INF/web.xml
@@ -43,4 +43,11 @@
         <error-code>404</error-code>
         <location>/WEB-INF/jsp/error/error.jsp</location>
     </error-page>
+    
+    <jsp-config>
+        <taglib>
+            <taglib-uri>http://epam.gartsmanovich.com/isublsv/tag/hitTag</taglib-uri>
+            <taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
+        </taglib>
+    </jsp-config>
 </web-app>
