--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -13,7 +13,7 @@ navbar.form.password=Password
 navbar.form.password.confirm=Confirm Password
 navbar.form.email=Email
 footer.copyright=Copyright &copy; WhereUWannaGO 2019
-index.find.trip=Find a trip
+index.trip.find=Find a trip
 navbar.link.profile=Profile
 navbar.link.language=Language
 error.title=Error!
@@ -41,4 +41,37 @@ index.contact=Contact us
 index.contact.info=If you have any troubles with WhereUWannaGO service, we're not ready to help.
 index.services.info=Search and trip planning, sharing the cost of trip between its participants.
 index.about.info=Are you planning a trip? Is there free space in your car? Find fellow travelers or become one. Together more fun and cheaper!
+profile.data.name=Name
+profile.data.surname=Surname
+profile.data.patronymic=Patronymic
+profile.data.phone=Mobile phone
+profile.data.address=Address
+profile.save=Save
+profile.preferences.com.negative=Dont like to much talk
+profile.preferences.com.neutral=I like to chat if in the mood
+profile.preferences.com.positive=Love to chat
+profile.preferences.music.negative=Silence is golden!
+profile.preferences.music.neutral=Depends on playlist
+profile.preferences.music.positive=I love music
+profile.preferences.com=Communication
+profile.preferences.music=Music
+profile.pass.current=Current password
+profile.pass.new=New password
+profile.pass.new.confirm=Confirm new password
+profile.registration=Registration date
+profile.driver.number=Driver license number
+profile.driver.model=Car model
+profile.driver.color=Car color
+profile.driver.number.example=For example, 
+review.received.empty=You have not received any reviews yet
+review.left.empty=You have not written a single review
+review.rating=My total rating:
+navbar.trip.find=Find a trip
+navbar.trip.offer=Offer a trip
+trip.country=Country
+trip.city=City
+trip.departure.datetime=Date and time
+trip.find=Find a trip
+trip.from=From:
+trip.to=To:
 
