added new key path.page.find.show

--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -5,4 +5,5 @@ path.page.index=/index.jsp
 path.page.profile=/WEB-INF/jsp/profile/profile.jsp
 path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
+path.page.find.show=/WEB-INF/jsp/trip/show.jsp
 path.page.error=/WEB-INF/jsp/error/error.jsp
