added a new key

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -70,8 +70,9 @@ navbar.trip.find=Find a trip
 navbar.trip.offer=Offer a trip
 trip.country=Country
 trip.city=City
-trip.departure.datetime=Date and time
+trip.departure.datetime=Date and time:
 trip.find=Find a trip
 trip.from=From:
 trip.to=To:
+trip.show.empty=No trips found
 
