--- a/hitcher/src/main/resources/database.properties
+++ b/hitcher/src/main/resources/database.properties
@@ -2,7 +2,7 @@ user=hitcher_user1
 password=password
 url=jdbc:mysql://localhost/hitcher_db
 characterEncoding=UTF-8
-serverTimezone=UTC
+serverTimezone=Europe/Minsk
 useUnicode=true
 autoReconnect=true
 poolSize=32
