added a new keys

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -75,4 +75,19 @@ trip.find=Find a trip
 trip.from=From:
 trip.to=To:
 trip.show.empty=No trips found
+trip.show.driver=Driver
+trip.show.from=From
+trip.show.to=To
+trip.show.departure=Departure date
+trip.show.arrival=Arrival date
+trip.show.price=Price
+user.list.empty=Users are not found
+profile.reset=Reset
+navbar.form.invalid.feedback=Please fill out this field
+navbar.password.span=At least 8 symbols: one digit, one lower case letter, one upper case letter, one special character, no whitespaces. Ex. aaZZa44@
+profile.invalid.feedback=Please fill out this field
+trip.invalid.feedback=Please fill out this field
+navbar.trip.mine=My trips
+
+
 
