added a new keys

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -70,7 +70,7 @@ navbar.trip.find=Find a trip
 navbar.trip.offer=Offer a trip
 trip.country=Country
 trip.city=City
-trip.departure.datetime=Date and time:
+trip.departure.datetime=Departure date:
 trip.find=Find a trip
 trip.from=From:
 trip.to=To:
@@ -88,6 +88,11 @@ navbar.password.span=At least 8 symbols: one digit, one lower case letter, one u
 profile.invalid.feedback=Please fill out this field
 trip.invalid.feedback=Please fill out this field
 navbar.trip.mine=My trips
+trip.arrival.datetime=Arrival date:
+trip.offer=Offer
+trip.free.seat=Free seats
+trip.smoking=Smoking is allowed
+trip.pets=Pets are allowed
 
 
 
