--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 ###############################
 ## Application configuration ##
 ###############################
-path.page.index=/index.jsp
+path.page.index=/
 path.page.profile=/WEB-INF/jsp/profile/profile.jsp
 path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
