--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -3,9 +3,11 @@
 ###############################
 path.page.index=/
 path.page.profile=/WEB-INF/jsp/profile/profile.jsp
+path.page.profile.action=/profile.do
 path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
 path.page.find.list=/WEB-INF/jsp/trip/result_list.jsp
 path.page.my.trips=/WEB-INF/jsp/trip/my_trips.jsp
+path.page.my.trips.action=/trip/my_trips.do
 path.page.user.list=/WEB-INF/jsp/admin/user_list.jsp
 path.page.error=/WEB-INF/jsp/error/error.jsp
