changed method name

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -80,7 +80,7 @@ trip.show.from=From
 trip.show.to=To
 trip.show.departure=Departure date
 trip.show.arrival=Arrival date
-trip.show.price=Price
+trip.show.price=Price, $
 user.list.empty=Users are not found
 profile.reset=Reset
 navbar.form.invalid.feedback=Please fill out this field
@@ -90,9 +90,17 @@ trip.invalid.feedback=Please fill out this field
 navbar.trip.mine=My trips
 trip.arrival.datetime=Arrival date:
 trip.offer=Offer
-trip.free.seat=Free seats
+trip.free.seat=Free seats:
 trip.smoking=Smoking is allowed
 trip.pets=Pets are allowed
+navbar.link.reset=Reset
+navbar.ajax.error=Ajax Error!
+navbar.error.wrong.login=Wrong login or password
+navbar.error.user.not.exist=User not exit
+navbar.error.invalid.email=Email is not valid
+navbar.error.invalid.login=Login is not valid
+navbar.error.user.exist=User with that login is already exists
+navbar.error.email.exist=User with that email is already exists
 
 
 
