added a new keys

--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -8,6 +8,7 @@ path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
 path.page.find.list=/WEB-INF/jsp/trip/result_list.jsp
 path.page.my.trips=/WEB-INF/jsp/trip/my_trips.jsp
+path.page.my.trip.show=/WEB-INF/jsp/trip/show.jsp
 path.page.my.trips.action=/trip/my_trips.do
 path.page.user.list=/WEB-INF/jsp/admin/user_list.jsp
 path.page.error=/WEB-INF/jsp/error/error.jsp
