added a new keys

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -101,6 +101,9 @@ navbar.error.invalid.email=Email is not valid
 navbar.error.invalid.login=Login is not valid
 navbar.error.user.exist=User with that login is already exists
 navbar.error.email.exist=User with that email is already exists
+trip.info=Trip information
+trip.delete=Delete
+trip.edit=Edit
 
 
 
