added a new key

--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -3,6 +3,7 @@
 ###############################
 path.page.index=/
 path.page.profile=/WEB-INF/jsp/profile/profile.jsp
+path.page.profile.show=/WEB-INF/jsp/profile/show.jsp
 path.page.profile.action=/profile.do
 path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
