added a new key

--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -104,6 +104,7 @@ navbar.error.email.exist=User with that email is already exists
 trip.info=Trip information
 trip.delete=Delete
 trip.edit=Edit
+profile.ban=Ban
 
 
 
