--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -96,7 +96,7 @@ trip.pets=Pets are allowed
 navbar.link.reset=Reset
 navbar.ajax.error=Ajax Error!
 navbar.error.wrong.login=Wrong login or password
-navbar.error.user.not.exist=User not exit
+navbar.error.user.not.exist=User not exist
 navbar.error.invalid.email=Email is not valid
 navbar.error.invalid.login=Login is not valid
 navbar.error.user.exist=User with that login is already exists
