added a new key

--- a/hitcher/src/main/resources/config.properties
+++ b/hitcher/src/main/resources/config.properties
@@ -6,6 +6,7 @@ path.page.profile=/WEB-INF/jsp/profile/profile.jsp
 path.page.profile.show=/WEB-INF/jsp/profile/show.jsp
 path.page.profile.action=/profile.do
 path.page.find.trip=/WEB-INF/jsp/trip/find.jsp
+path.page.find.trip.action=/trip/load.do
 path.page.offer.trip=/WEB-INF/jsp/trip/offer.jsp
 path.page.find.list=/WEB-INF/jsp/trip/result_list.jsp
 path.page.my.trips=/WEB-INF/jsp/trip/my_trips.jsp
