--- a/hitcher/src/main/resources/pagecontent.properties
+++ b/hitcher/src/main/resources/pagecontent.properties
@@ -105,6 +105,9 @@ trip.info=Trip information
 trip.delete=Delete
 trip.edit=Edit
 profile.ban=Ban
+trip.show.passengers=Passengers
+trip.register=Register
+trip.unregister=Unregister
 
 
 
