added error-page for 500 code

--- a/hitcher/web/WEB-INF/web.xml
+++ b/hitcher/web/WEB-INF/web.xml
@@ -43,6 +43,10 @@
         <error-code>404</error-code>
         <location>/WEB-INF/jsp/error/error.jsp</location>
     </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/jsp/error/error.jsp</location>
+    </error-page>
     
     <jsp-config>
         <taglib>
